# leptos-pomodoro

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.sh  index.html
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
pkg/: leptos_pomodoro.js  leptos_pomodoro_bg.wasm
src/: lib.rs
src/components/: pomodoro.rs
