[package]
name = "leptos-pomodoro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlAudioElement",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-timers = "0.3"
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["console_error_panic_hook"]